fix stretching

--- a/beta/src/styles/index.css
+++ b/beta/src/styles/index.css
@@ -172,10 +172,6 @@
     overflow: auto;
   }
 
-  img {
-    max-width: calc(min(700px, 100%));
-  }
-
   summary::-webkit-details-marker {
     display: none;
   }
